[tool.poetry]
name = "ladbot"
version = "0.1.0"
description = ""
authors = ["petecampbell <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
openai = "^0.10.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
